# recognition-cvis

./: .gitignore  README.md  pyproject.toml
data/: cenas_esteira.npz  dataset_blobs_isolados.npz  metadados_blobs_isolados.json  metadados_cenas.json  splits_dataset_blobs_isolados.npz
docs/superpowers/plans/: 2026-06-26-parte2-redes-neurais.md
docs/superpowers/specs/: 2026-06-26-parte2-redes-neurais-design.md
notebooks/: 1aParte.ipynb  2aParte.ipynb  TECA2_Gerador_Dataset_Oficial_v2.ipynb
src/: avaliacao.py  classificador.py  momentos.py  rejeicao.py  segmentacao.py
